--- a/vita3k/host/CMakeLists.txt
+++ b/vita3k/host/CMakeLists.txt
@@ -5,13 +5,15 @@ add_library(
 	include/host/functions.h
 	include/host/import_fn.h
 	include/host/load_self.h
-	include/host/pup_types.h
+	include/host/pkg.h
+	include/host/sce_types.h
 	include/host/sfo.h
 	include/host/state.h
 	include/host/window.h
 	src/load_self.cpp
+	src/pkg.cpp
 	src/pup.cpp
-	src/pup_utils.cpp
+	src/sce_utils.cpp
 	src/sfo.cpp
 )
 
