--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -224,13 +224,16 @@ set (BOOST_COMPONENTS system
 
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
 
-add_subdirectory(ffmpeg)
-add_subdirectory(zlib)
 set(ZLIB_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/zlib")
 set(ZLIB_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/zlib/build/Debug/zlibstaticd.lib")
-add_subdirectory(libtomcrypt)
 set(LIBTOMCRYPT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libtomcrypt/build/include")
 set(LIBTOMCRYPT_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/libtomcrypt/build/lib/tomcrypt.lib")
+set(LIBB64_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libb64/include")
+set(LIBZRIF_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libzRIF/include")
+set(PSVPFSPARSER_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/psvpfsparser")
+add_subdirectory(ffmpeg)
+add_subdirectory(zlib)
+add_subdirectory(libtomcrypt)
 add_subdirectory(libb64)
 add_subdirectory(libzRIF)
 add_subdirectory(psvpfsparser/cmake)
