--- a/external/zlib/CMakeLists.txt
+++ b/external/zlib/CMakeLists.txt
@@ -6,4 +6,7 @@ target_include_directories(zlib INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
 if (WIN32)
     target_link_libraries(zlib INTERFACE 
         "${CMAKE_CURRENT_SOURCE_DIR}/build/Debug/zlibstaticd.lib")
+elseif (UNIX) 
+    target_link_libraries(zlib INTERFACE 
+        "${CMAKE_CURRENT_SOURCE_DIR}/build/Debug/libz.a")
 endif()
